mobile verison small fixes

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,56 +1,60 @@
 .contact-heading {
-  text-align: center;
-  min-height: 20vh;
-  width: 80%;
-  margin: 0rem auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $special-color;
+	text-align: center;
+	min-height: 20vh;
+	width: 80%;
+	margin: 0rem auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: $special-color;
 }
 
 .contact-form {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 auto;
-  transition: all 0.25s ease;
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	margin: 0 auto;
+	transition: all 0.25s ease;
 
-  input,
-  textArea {
-    width: 100%;
-    margin: 1rem auto;
-    font-size: $text;
-    cursor: pointer;
-    border: none;
-    border-radius: 25px;
-    color: $special-color;
-    padding: 1rem 0rem;
-    @include nueOut;
-    text-align: center;
-  }
+	input,
+	textArea {
+		width: 100%;
+		margin: 1rem auto;
+		font-size: $text;
+		cursor: pointer;
+		border: none;
+		border-radius: 25px;
+		color: $special-color;
+		padding: 1rem 0rem;
+		@include nueOut;
+		text-align: center;
 
-  button {
-    width: 60%;
-    margin: 2rem auto;
-    font-size: $text;
-    cursor: pointer;
-    border: none;
-    border-radius: 25px;
-    color: $special-color;
-    padding: 1rem 1.5rem;
-    background: none;
-    font-weight: bold;
-    border: 3px solid transparent;
+		&:focus {
+			@include nueIn;
+		}
+	}
 
-    @include nueOut;
+	button {
+		width: 60%;
+		margin: 2rem auto;
+		font-size: $text;
+		cursor: pointer;
+		border: none;
+		border-radius: 25px;
+		color: $special-color;
+		padding: 1rem 1.5rem;
+		background: none;
+		font-weight: bold;
+		border: 3px solid transparent;
 
-    &:hover {
-      border: 3px solid $special-color;
-    }
+		@include nueOut;
 
-    &:active {
-      @include nueIn;
-    }
-  }
+		&:hover {
+			border: 3px solid $special-color;
+		}
+
+		&:active {
+			@include nueIn;
+		}
+	}
 }
