--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -87,6 +87,7 @@
 	h1 {
 		color: whitesmoke;
 		font-size: $text;
+		max-width: 90%;
 	}
 }
 
